"Updated index.html, script.js, and styles.css files with changes to fantasy team builder UI and functionality."

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Fantasy Sports Team Builder</h1>
+        <h1> Sports Team Builder</h1>
         <div id="sport-selection">
             <button id = "choice-button" onclick="selectSport('football')">Fantasy Football</button>
             <button id = "choice-button" onclick="selectSport('cricket')">Fantasy Cricket</button>
